[package]
authors = ["Marcus Geiger"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface the ST LPS22 pressure sensor"
edition = "2018"
keywords = ["embedded-hal-driver", "pressure", "thermometer"]
license = "MIT OR Apache-2.0"
name = "lps22"
readme = "README.md"
repository = "https://github.com/bwolf/lps22"
version = "0.1.0"

[dependencies]
hal = { package = "embedded-hal", version = "0.2.0" }
generic-array = "0.11.0"

[dependencies.cast]
default-features = false
version = "0.2.2"
